--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
   annotationProcessor "org.immutables:value:${immutablesVersion}"
   compileOnly "org.immutables:value:${immutablesVersion}"
@@ -36,6 +35,7 @@ dependencies {
 
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.postgresql:postgresql'
+	implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.6.1'
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
