--- a/dev/config/application-dev.yaml
+++ b/dev/config/application-dev.yaml
@@ -3,3 +3,7 @@ spring:
     url: 'jdbc:postgresql://127.0.0.1:5432/myna'
     username: myna
     password: devtest
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
