cache deps from gradle

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,6 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt-hotspot'
+        cache: 'gradle'
     - name: run tests
       run: ./gradlew cleanTest test -i
