iss #3: add admin auth by predef. tokens

--- a/dev/config/application-dev.yaml
+++ b/dev/config/application-dev.yaml
@@ -7,3 +7,9 @@ logging:
   level:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    dev.maizy: TRACE
+
+myna:
+  admin-api:
+    tokens:
+      - devonlytoken1
