--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.17'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+  id 'java'
+  id 'org.springframework.boot' version '2.7.17'
+  id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'dev.maizy'
@@ -9,44 +9,46 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
 }
 
 repositories {
-	mavenCentral()
+  mavenCentral()
 }
 
 ext {
-	set('testcontainersVersion', '1.17.6')
-	set('immutablesVersion', '2.7.3')
+  set('testcontainersVersion', '1.17.6')
+  set('immutablesVersion', '2.7.3')
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
   annotationProcessor "org.immutables:value:${immutablesVersion}"
   compileOnly "org.immutables:value:${immutablesVersion}"
   testCompileOnly "org.immutables:value:${immutablesVersion}"
 
-	implementation 'org.liquibase:liquibase-core'
-	implementation 'org.postgresql:postgresql'
-	implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.6.1'
+  implementation 'org.liquibase:liquibase-core'
+  implementation 'org.postgresql:postgresql'
+  implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.6.1'
 
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+  runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.testcontainers:junit-jupiter'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'org.testcontainers:junit-jupiter'
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
-	}
+  imports {
+    mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+  }
 }
 
 bootRun {
@@ -55,5 +57,5 @@ bootRun {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+  useJUnitPlatform()
 }
