--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.session:spring-session-data-redis'
+  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
   annotationProcessor "org.immutables:value:${immutablesVersion}"
@@ -41,6 +44,7 @@ dependencies {
 
   runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
+  developmentOnly 'org.springframework.boot:spring-boot-devtools'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.testcontainers:junit-jupiter'
 }
