--- a/dev/db.yml
+++ b/dev/db.yml
@@ -13,3 +13,10 @@ services:
     volumes:
       - './data/postgres/data:/var/lib/postgresql/data'
       - './data/psql:/opt/psql'
+  redis:
+    image: redis:7.2.3-alpine
+    ports:
+      - '127.0.0.1:6379:6379'
+    command: redis-server --save 5 1 --loglevel warning --requirepass devtest
+    volumes:
+      - './data/redis:/data'
