--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
   implementation 'org.springframework.session:spring-session-data-redis'
   implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+  implementation 'org.webjars:bootstrap:5.3.2'
+
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
   annotationProcessor "org.immutables:value:${immutablesVersion}"
