iss #4: happy path tests for game state, fix credits with player id

--- a/src/main/resources/config/application-default.yaml
+++ b/src/main/resources/config/application-default.yaml
@@ -13,6 +13,8 @@ spring:
     static-path-pattern: "/static/**"
 server:
   port: 12813
+  tomcat:
+    use-relative-redirects: true
   servlet:
     session:
       timeout: 14d
