--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
   testImplementation 'org.testcontainers:junit-jupiter'
   testImplementation 'org.testcontainers:postgresql'
   testImplementation 'com.redis.testcontainers:testcontainers-redis-junit-jupiter:1.4.6'
+  testImplementation 'org.jsoup:jsoup:1.17.2'
 }
 
 dependencyManagement {
