--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Cache Docker images
+      uses: ScribeMD/docker-cache@0.3.7
+      with:
+        key: docker-images-${{ runner.os }}
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
