--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   implementation 'org.springframework.session:spring-session-data-redis'
   implementation 'org.springframework.boot:spring-boot-starter-data-redis'
   implementation 'org.springframework.boot:spring-boot-starter-websocket'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
   implementation 'org.webjars:bootstrap:5.3.2'
   implementation 'org.webjars.npm:bootstrap-icons:1.11.2'
