--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,16 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Cache Docker images
-      uses: ScribeMD/docker-cache@0.3.7
+      uses: ScribeMD/docker-cache@0.5.0
       with:
         key: docker-images-${{ runner.os }}
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'adopt-hotspot'
+        java-version: '21'
+        distribution: 'corretto'
         cache: 'gradle'
     - name: run tests
       run: ./gradlew cleanTest test --info
