--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '3.3.4'
-  id 'io.spring.dependency-management' version '1.1.6'
+  id 'org.springframework.boot' version '3.4.1'
+  id 'io.spring.dependency-management' version '1.1.7'
   id 'checkstyle'
 }
 
@@ -39,8 +39,8 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-websocket'
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-  implementation 'org.webjars:bootstrap:5.3.2'
-  implementation 'org.webjars.npm:bootstrap-icons:1.11.2'
+  implementation 'org.webjars:bootstrap:5.3.3'
+  implementation 'org.webjars.npm:bootstrap-icons:1.11.3'
 
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
@@ -50,7 +50,7 @@ dependencies {
 
   implementation 'org.liquibase:liquibase-core'
   implementation 'org.postgresql:postgresql'
-  implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.8.3'
+  implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.0'
   implementation 'dev.maizy:gibberish:1.0.0'
 
   runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
@@ -61,7 +61,7 @@ dependencies {
   testImplementation 'org.testcontainers:junit-jupiter'
   testImplementation 'org.testcontainers:postgresql'
   testImplementation 'com.redis.testcontainers:testcontainers-redis-junit-jupiter:1.4.6'
-  testImplementation 'org.jsoup:jsoup:1.17.2'
+  testImplementation 'org.jsoup:jsoup:1.18.3'
 }
 
 dependencyManagement {
@@ -79,7 +79,7 @@ tasks.named('test') {
   useJUnitPlatform()
 }
 
-tasks.withType(Checkstyle) {
+tasks.withType(Checkstyle).configureEach {
   reports {
     xml.required = false
     html.required = false
