iss #18: refactor security configuration for spring security 6

--- a/dev/config/application-dev.yaml
+++ b/dev/config/application-dev.yaml
@@ -16,6 +16,7 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     dev.maizy: TRACE
     web: DEBUG
+#    org.springframework.security: DEBUG
 server:
   address: localhost
 #  servlet:
